--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_dialog: ^3.2.0
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   dio: ^5.4.1
