--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^2.0.9
   get_it: ^7.6.7
   google_fonts: ^6.1.0
+  google_nav_bar: ^5.0.6
   intl: ^0.19.0
   introduction_screen: ^3.1.14
 
