--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  flutter_local_notifications: ^17.0.0
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
   get_it: ^7.6.7
   google_fonts: ^6.1.0
   google_nav_bar: ^5.0.6
+  image_picker: ^1.0.7
   intl: ^0.19.0
   introduction_screen: ^3.1.14
 
