--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   image_picker: ^1.0.7
   intl: ^0.19.0
   introduction_screen: ^3.1.14
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
