Add payment feature with Visa and RefCode options
Implement payment feature with Visa and RefCode options. Add views, cubit,
services, and routes for handling payment transactions. Include logic for
getting authentication token, order ID, payment request token, and reference
code. Introduce webview for Visa payment option.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   introduction_screen: ^3.1.14
   lottie: ^3.1.0
   shared_preferences: ^2.2.3
+  webview_flutter: ^4.7.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
