--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_svg: ^2.0.9
   get_it: ^7.6.7
   google_fonts: ^6.1.0
+  google_generative_ai: ^0.4.0
   google_nav_bar: ^5.0.6
   image_picker: ^1.0.7
   intl: ^0.19.0
