--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   dartz: ^0.10.1
   dio: ^5.4.1
   equatable: ^2.0.5
+  file_picker: ^8.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
@@ -30,7 +31,9 @@ dependencies:
   intl: ^0.19.0
   introduction_screen: ^3.1.14
   lottie: ^3.1.0
+  open_file: ^3.3.2
   shared_preferences: ^2.2.3
+  syncfusion_flutter_pdfviewer: ^24.0.0
   webview_flutter: ^4.7.0
 
 dev_dependencies:
@@ -57,6 +60,7 @@ flutter:
   assets:
     - assets/images/
     - assets/animation/
+    - assets/QB.pdf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
